# devLens

./: .gitignore  README.md  bin.py  devlens.spec  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml
devlens/: __init__.py  ai.py  browser.py  cli.py  config.py  error.py  interactive.py  pkg.py  ranker.py  render.py  search.py  theme.py
devlens/shortcuts/: __init__.py  interactive.py  render.py  search.py  store.py
npm/: install.js  package.json  wrapper.js
