[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devlens"
version = "0.1.0"
description = "Privacy-first search engine for developers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx[http2]>=0.25.0",
    "openrouter>=0.0.1",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
dlens = "devlens.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["devlens"]
